Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74521

Fix automoc upstream to correctly rerun moc when dependent includes have changed

XMLWordPrintable

      Example:

      • Have a foo.cpp file that includes foo.h that includes bar.h
      • Have foo.cpp #include "foo.moc"

      Currently if bar.h is changed, automoc will not rerun moc on foo.cpp. This is because automoc doesn't transfer the dependencies of foo.cpp to foo.moc, nor does it run the preprocessor on foo.moc to figure out the dependencies.

      We will need this when doing feature re-configuration (for example you build qtbase with opengl feature enabled, and then you reconfigure with opengl feature disabled).

      Currently moc is not rerun, and you get build failures.

      Upstream issue
      https://gitlab.kitware.com/cmake/cmake/issues/19058
      https://gitlab.kitware.com/cmake/cmake/issues/17750

        For Gerrit Dashboard: QTBUG-74521
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes