src/tools/moc/moc.cpp
@@ -1382,6 +1382,7 @@ void Moc::parsePluginData(ClassDef *def)
                 error(msg.constData());
                 return;
             }
+            parsedPluginMetadataFiles.append(fi.canonicalFilePath());
             metaData = file.readAll();
         }
     }
